test/yaml/testdata/output/iprange/multiple-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: example.com
    name: example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iprange-ingress1-example-com
  namespace: namespace1
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /api
    name: rule-prefix-api
  - backendRefs:
    - name: service-ingress1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /admin
    name: rule-prefix-admin
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: iprange-ingress1-example-com-0
  namespace: namespace1
spec:
  authorization:
    defaultAction: Deny
    rules:
    - action: Allow
      principal:
        clientCIDRs:
        - 10.0.0.0/24
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: iprange-ingress1-example-com
    sectionName: rule-prefix-api
status:
  ancestors: null
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: iprange-ingress1-example-com-1
  namespace: namespace1
spec:
  authorization:
    defaultAction: Allow
    rules:
    - action: Deny
      principal:
        clientCIDRs:
        - 192.168.100.0/24
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: iprange-ingress1-example-com
    sectionName: rule-prefix-admin
status:
  ancestors: null
